--- a/index.html
+++ b/index.html
@@ -3,45 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mi primera pagina</title>
+  <title>Mi página con otro estilo</title>
   <style>
-    /* Fondo animado */
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(270deg, #ff7675, #74b9ff, #55efc4);
-      background-size: 600% 600%;
-      animation: moverFondo 15s ease infinite;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #dfe9f3, #ffffff);
       display: flex;
       flex-direction: column;
       align-items: center;
       padding: 30px;
     }
 
-    @keyframes moverFondo {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-    /* Animación de entrada */
-    @keyframes fadeInUp {
-      0% { opacity: 0; transform: translateY(40px); }
-      100% { opacity: 1; transform: translateY(0); }
-    }
-
-    /* Estilo de las cards */
+    /* Cards con efecto neumorphism */
     .card {
-      background: white;
-      border-radius: 15px;
-      box-shadow: 0px 4px 10px rgba(0,0,0,0.3);
+      background: #ecf0f3;
+      border-radius: 20px;
+      box-shadow: 7px 7px 15px #c1c8d1, -7px -7px 15px #ffffff;
       margin: 20px;
-      padding: 20px;
-      max-width: 400px;
+      padding: 25px;
+      max-width: 380px;
       text-align: center;
       transition: transform 0.3s ease;
       opacity: 0;
-      animation: fadeInUp 1s ease forwards;
+      animation: fadeIn 1s forwards;
     }
 
     .card:nth-child(1) { animation-delay: 0.2s; }
@@ -50,40 +35,47 @@
     .card:nth-child(4) { animation-delay: 0.8s; }
 
     .card:hover {
-      transform: scale(1.05);
+      transform: translateY(-8px);
     }
 
     .card img {
       width: 100%;
-      border-radius: 10px;
+      border-radius: 15px;
+      box-shadow: 4px 4px 10px #c1c8d1, -4px -4px 10px #ffffff;
     }
 
     h1 {
-      font-size: 1.6rem;
+      font-size: 1.4rem;
       color: #2d3436;
     }
 
     p {
       font-size: 1rem;
-      color: #636e72;
-      margin: 10px 0 15px;
+      color: #555;
+      margin: 12px 0 18px;
     }
 
-    /* Botones */
+    /* Botones con efecto neumorphism */
     button {
-      background: #0984e3;
-      color: white;
+      background: #ecf0f3;
       border: none;
-      padding: 10px 18px;
-      border-radius: 10px;
+      padding: 12px 20px;
+      border-radius: 15px;
       font-size: 1rem;
       cursor: pointer;
-      transition: background 0.3s ease, transform 0.2s;
+      color: #2d3436;
+      box-shadow: 4px 4px 10px #c1c8d1, -4px -4px 10px #ffffff;
+      transition: all 0.2s ease;
     }
 
-    button:hover {
-      background: #74b9ff;
-      transform: scale(1.05);
+    button:active {
+      box-shadow: inset 4px 4px 10px #c1c8d1, inset -4px -4px 10px #ffffff;
+      transform: scale(0.98);
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
